--- a/app/assets/stylesheets/modules/_credits.scss
+++ b/app/assets/stylesheets/modules/_credits.scss
@@ -1,129 +1,134 @@
 .chapter-container {
-  margin: 40px 120px 0 120px;
-  background-color: $bg_color;
+  margin-left: 280px;
+  padding: 48px 10% 0 10%;
+  .chapter-white {
+    background-color: #fff;
 
-  .chapter-head {
-    font-size: 24px;
-    padding: 8px 24px;
-    background-color: $bg_color;
-    position: relative;
-    max-width: 343px;
-    margin: auto;
-  }
-  .chapter-inner {
-    height: 500px;
-    max-width: 400px;
-    border-top: 3px solid #fff;
-    padding: 24px 50px 50px 50px;
-    margin: auto;
-    .number {
-      width: 100%;
-      height: 48px;
-      padding: 10px 16px 8px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-      background: #fff;
-      line-height: 1.5;
-      font-size: 16px;
-    }
-    .exp_month{
-      width: 35%;
+    .chapter-head {
+      font-size: 24px;
+      padding: 16px 24px;
       position: relative;
-      z-index: 2;
-      height: 48px;
-      padding: 0 16px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-      background: 0;
-      font-size: 16px;
-      line-height: 1.5;
-      cursor: pointer;
-      margin: 0 8px 0 0;
+      max-width: 343px;
+      margin: auto;
     }
-    .exp_year {
-      width: 35%;
-      position: relative;
-      z-index: 2;
-      height: 48px;
-      padding: 0 16px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-      background: 0;
-      font-size: 16px;
-      line-height: 1.5;
-      cursor: pointer;
-      margin: 0 8px 0 8px;
-    }
-    .cvc {
-      width: 100%;
-      height: 48px;
-      padding: 10px 16px 8px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-      background: #fff;
-      line-height: 1.5;
-      font-size: 16px;
-    }
-    .add {
-      display: block;
-      background-color: #ea352d;
-      width: 100%;
-      line-height: 48px;
-      font-size: 14px;
-      border: 1px solid transparent;
-      -webkit-transition: all ease-out .3s;
-      transition: all ease-out .3s;
-      cursor: pointer;
-      text-align: center;
-      margin: 20px 0 0 0 ;
-    }
-    &__credit-number {
-      margin: 8px 0 0;
-      display: inline-block;
-      align-items: center;
-      font-weight: 600;
-      font-size: 15px;
+    .chapter-inner {
+      height: 450px;
+      max-width: 400px;
+      border-top: 3px solid #f5f5f5;
+      padding: 24px 50px 0 50px;
+      margin: auto;
+      .number {
+        width: 100%;
+        height: 48px;
+        padding: 10px 16px 8px;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+        background: #fff;
+        line-height: 1.5;
+        font-size: 16px;
       }
-    &__credit-required {
-      background-color: red;
-      margin: 0 0 0 8px;
-      padding: 2px 4px;
-      border-radius: 2px;
-      color: #fff;
-      font-size: 12px;
-    }
-    &__credit-images {
-      margin: 8px 2px 0 0;
-    }
-    &__expiration-date{
-      width: 100%;
-      position: relative;
+      .exp_month{
+        width: 35%;
+        position: relative;
+        z-index: 2;
+        height: 48px;
+        padding: 0 16px;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+        background: #fff;
+        font-size: 16px;
+        line-height: 1.5;
+        cursor: pointer;
+        margin: 0 8px 0 0;
+      }
+      .exp_year {
+        width: 35%;
+        position: relative;
+        z-index: 2;
+        height: 48px;
+        padding: 0 16px;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+        background: #fff;
+        font-size: 16px;
+        line-height: 1.5;
+        cursor: pointer;
+        margin: 0 8px 0 8px;
+      }
+      .cvc {
+        width: 100%;
+        height: 48px;
+        padding: 10px 16px 8px;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+        background: #fff;
+        line-height: 1.5;
+        font-size: 16px;
+      }
+      .add {
+        display: block;
+        background-color: rgb(0, 247, 255);
+        width: 100%;
+        line-height: 48px;
+        font-size: 14px;
+        border: 1px solid transparent;
+        -webkit-transition: all ease-out .3s;
+        transition: all ease-out .3s;
+        cursor: pointer;
+        text-align: center;
+        margin: 20px 0 0 0 ;
+      }
+      &__credit-number {
+        margin: 8px 0 0;
+        display: inline-block;
+        align-items: center;
+        font-weight: 600;
+        font-size: 15px;
+        }
+      &__credit-required {
+        background-color: red;
+        margin: 0 0 0 8px;
+        padding: 2px 4px;
+        border-radius: 2px;
+        color: #fff;
+        font-size: 12px;
+      }
+      &__credit-images {
+        margin: 8px 2px 0 0;
+      }
+      &__expiration-date{
+        width: 100%;
+        position: relative;
+      }
     }
   }
 }
 
-.credit-group{
-  margin: 40px 120px 0 120px;
-  background-color: #f5f5f5;
-  &__title {
-    font-size: 24px;
-    padding: 8px 24px;
-    background-color: #f5f5f5;
-    position: relative;
-    max-width: 343px;
-    margin: auto;
-  }
-  .back_btn{
-    display: block;
-    background-color: #ea352d;
-    width: 100%;
-    line-height: 48px;
-    font-size: 14px;
-    border: 1px solid transparent;
-    -webkit-transition: all ease-out .3s;
-    transition: all ease-out .3s;
-    cursor: pointer;
-    text-align: center;
-    margin: 20px 0 0 0 ;
+.credit-register{
+  margin-left: 280px;
+  padding: 48px 10% 0 10%;
+  .credit-white {
+    background-color: #fff;
+    height: 280px;
+    .credit-inner {
+      font-size: 21px;
+      padding: 34px 24px;
+      position: relative;
+      max-width: 343px;
+      margin: auto;
+      
+    }
+
+    .back_btn{
+      display: block;
+      background-color: rgb(0, 247, 255);
+      color: rgb(4, 56, 99);
+      width: 200px;
+      line-height: 48px;
+      font-size: 14px;
+      border: 1px solid transparent;
+      text-align: center;
+      margin: 20px 0 0 30% ;
+    }
   }
 }
