--- a/app/views/credits/new.html.haml
+++ b/app/views/credits/new.html.haml
@@ -1,71 +1,73 @@
 = render "layouts/header"
 
-.mypage-container.clearfix
-  -# サイドバー
+.mypage-container
+
+  .chapter-creditsidebar
   = render "layouts/sidebar"
 
   .chapter-container
-    .chapter-head
-      クレジットカード情報入力
-    .chapter-inner
-      = form_tag(pay_credits_path, method: :post, id: 'charge-form',  name: "inputForm") do
-        %label.chapter-inner__credit-number
-          カード番号
-        %span.chapter-inner__credit-required
-          必須
-        = text_field_tag "number", "", class: "number", placeholder: "半角数字のみ" ,maxlength: "16", type: "text", id: "card_number"
-        %br
-        .chapter-inner__credit-images
-          = image_tag 'credit-image/visa.svg', class: 'creditcard-pic1' ,size: '32x20'
-          = image_tag 'credit-image/master-card.svg', class: 'creditcard-pic2' ,size: '32x20'
-          = image_tag 'credit-image/saison-card.svg', class: 'creditcard-pic3' ,size: '32x20'
-          = image_tag 'credit-image/jcb.svg', class: 'creditcard-pic4' ,size: '32x20'
-          = image_tag 'credit-image/american_express.svg', class: 'creditcard-pic5' ,size: '32x20'
-          = image_tag 'credit-image/dinersclubbb.svg', class: 'creditcard-pic6' ,size: '32x20'
-          = image_tag 'credit-image/discover.svg', class: 'creditcard-pic7' ,size: '32x20'
+    .chapter-white
+      .chapter-head
+        クレジットカード情報入力
+      .chapter-inner
+        = form_tag(pay_credits_path, method: :post, id: 'charge-form',  name: "inputForm") do
+          %label.chapter-inner__credit-number
+            カード番号
+          %span.chapter-inner__credit-required
+            必須
+          = text_field_tag "number", "", class: "number", placeholder: "半角数字のみ" ,maxlength: "16", type: "text", id: "card_number"
+          %br
+          .chapter-inner__credit-images
+            = image_tag 'credit-image/visa.svg', class: 'creditcard-pic1' ,size: '32x20'
+            = image_tag 'credit-image/master-card.svg', class: 'creditcard-pic2' ,size: '32x20'
+            = image_tag 'credit-image/saison-card.svg', class: 'creditcard-pic3' ,size: '32x20'
+            = image_tag 'credit-image/jcb.svg', class: 'creditcard-pic4' ,size: '32x20'
+            = image_tag 'credit-image/american_express.svg', class: 'creditcard-pic5' ,size: '32x20'
+            = image_tag 'credit-image/dinersclubbb.svg', class: 'creditcard-pic6' ,size: '32x20'
+            = image_tag 'credit-image/discover.svg', class: 'creditcard-pic7' ,size: '32x20'
 
-        %label.chapter-inner__credit-number
-          有効期限
-        %span.chapter-inner__credit-required
-          必須
-        .chapter-inner__expiration-date
-        %select#exp_month{name: "exp_month", class:"exp_month", type: "text"}
-          %option{value: ""} --
-          %option{value: "1"}01
-          %option{value: "2"}02
-          %option{value: "3"}03
-          %option{value: "4"}04
-          %option{value: "5"}05
-          %option{value: "6"}06
-          %option{value: "7"}07
-          %option{value: "8"}08
-          %option{value: "9"}09
-          %option{value: "10"}10
-          %option{value: "11"}11
-          %option{value: "12"}12
-        %span 月
-        %select#exp_year{name: "exp_year", class:"exp_year", type: "text"}
-          %option{value: ""} --
-          %option{value: "2020"}20
-          %option{value: "2021"}21
-          %option{value: "2022"}22
-          %option{value: "2023"}23
-          %option{value: "2024"}24
-          %option{value: "2025"}25
-          %option{value: "2026"}26
-          %option{value: "2027"}27
-          %option{value: "2028"}28
-          %option{value: "2029"}29
-          %option{value: "2030"}30
-        %span 年
-        %br
-        %label.chapter-inner__credit-number
-          セキュリティコード
-        %span.chapter-inner__credit-required
-          必須
-        = text_field_tag "cvc", "", class: "cvc", placeholder: "カード背面3~4桁の番号", maxlength: "4", id: "cvc"
-        #card_token
-        = submit_tag "追加する",class:"add", id: "token_submit"
+          %label.chapter-inner__credit-number
+            有効期限
+          %span.chapter-inner__credit-required
+            必須
+          .chapter-inner__expiration-date
+          %select#exp_month{name: "exp_month", class:"exp_month", type: "text"}
+            %option{value: ""} --
+            %option{value: "1"}01
+            %option{value: "2"}02
+            %option{value: "3"}03
+            %option{value: "4"}04
+            %option{value: "5"}05
+            %option{value: "6"}06
+            %option{value: "7"}07
+            %option{value: "8"}08
+            %option{value: "9"}09
+            %option{value: "10"}10
+            %option{value: "11"}11
+            %option{value: "12"}12
+          %span 月
+          %select#exp_year{name: "exp_year", class:"exp_year", type: "text"}
+            %option{value: ""} --
+            %option{value: "2020"}20
+            %option{value: "2021"}21
+            %option{value: "2022"}22
+            %option{value: "2023"}23
+            %option{value: "2024"}24
+            %option{value: "2025"}25
+            %option{value: "2026"}26
+            %option{value: "2027"}27
+            %option{value: "2028"}28
+            %option{value: "2029"}29
+            %option{value: "2030"}30
+          %span 年
+          %br
+          %label.chapter-inner__credit-number
+            セキュリティコード
+          %span.chapter-inner__credit-required
+            必須
+          = text_field_tag "cvc", "", class: "cvc", placeholder: "カード背面3~4桁の番号", maxlength: "4", id: "cvc"
+          #card_token
+          = submit_tag "追加する",class:"add", id: "token_submit"
 
 -# バナー
 = render "products/banner"
