--- a/app/assets/stylesheets/modules/_addresses.scss
+++ b/app/assets/stylesheets/modules/_addresses.scss
@@ -1,7 +1,66 @@
 .address-container {
+  background-color: #fff;
   .error_message {
     color: red;
     font-size: 14px;
     margin: 8px 0 0;
+  }
+  &__head {
+    border-bottom: 1px solid #f5f5f5;
+    font-size: 24px;
+    padding: 8px 24px;
+    text-align: center;
+  }
+  &__form-box {
+    padding: 40px 40px 64px;
+  }
+  &__form {
+    font-size: 14px;
+    max-width: 343px;
+    margin: 0 auto;
+    &--field {
+      margin-bottom: 32px;
+      label {
+        display: inline;
+        font-weight: 600;
+      }
+      .form-require {
+        background-color: red;
+        font-size: 12px;
+        color: #fff;
+        padding: 3px 4px;
+        margin-left: 8px;
+        border-radius: 2px;
+        vertical-align: top;
+      }
+      .form-require-gray {
+        background-color: #ccc;
+        font-size: 12px;
+        color: #fff;
+        padding: 3px 4px;
+        margin-left: 8px;
+        border-radius: 2px;
+        vertical-align: top;
+      }
+      .input-form {
+        width: 100%;
+        background-color: #fff;
+        padding: 10px 16px 8px 16px;
+        margin-top: 8px;
+        border-radius: 4px;
+        box-shadow: none;
+        outline: none;
+        border: 1px solid #ccc;
+        height: 48px;
+        font-size: 16px;
+      }
+      .submit-btn {
+        height: 48px;
+        background-color: $main_color;
+        cursor: pointer;
+        color: #fff;
+        width: 100%;
+      }
+    }
   }
 }
