--- a/app/assets/stylesheets/modules/users/_registrations.scss
+++ b/app/assets/stylesheets/modules/users/_registrations.scss
@@ -113,6 +113,16 @@ html {
             padding: 3px 4px;
             margin-left: 8px;
             border-radius: 2px;
+            vertical-align: top;
+          }
+          .form-require-gray {
+            background-color: #ccc;
+            font-size: 12px;
+            color: #fff;
+            padding: 3px 4px;
+            margin-left: 8px;
+            border-radius: 2px;
+            vertical-align: top;
           }
           .input-form {
             width: 100%;
