エラ〜メッセージ表示

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,7 @@
 // layout
 @import "layout/header";
 @import "layout/footer";
+@import "layout/error_messages";
 
 // modules
 @import "modules/products/banner";
