--- a/app/assets/stylesheets/modules/products/_products.scss
+++ b/app/assets/stylesheets/modules/products/_products.scss
@@ -25,6 +25,16 @@
       margin: 0 auto;
       background-color: #fff;
 
+      .notice {
+        max-width: 700px;
+        margin: 0 auto;
+        color:#262626; 
+        background:#FFEBE8;
+        border:2px solid #990000;
+        padding:12px; font-weight:850;
+      }
+
+
         &-image {
           padding: 40px;
           &__title {
