update_destroy_method

--- a/app/views/products/destroy.html.haml
+++ b/app/views/products/destroy.html.haml
@@ -1,6 +1,6 @@
 = render "layouts/header"
-.contents.row
+.contents
   .success
     %h3 商品を取り下げました。
-    = link_to "出品した商品に戻る", '#'
+    = link_to "出品した商品一覧に戻る", '#'
 = render "layouts/footer"
