--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
 @import "modules/products/main";
 @import "modules/products/exhibition";
 @import "modules/products/products";
+@import "modules/products/show";
 @import "modules/users/registrations";
 @import "modules/users/userspage";
 @import "modules/credits";
