--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,66 +1,80 @@
 = render "layouts/header"
-%h1 プロダクト#{@product.id}のページです
-%h2 Userid:#{@product.user_id}の商品です
-%br/
-%ul
-  %li
-    = image_tag "#{@product.product_images[0].image_url}", alt: '', height: '300', width: '400', class: 'img'
-    %ul
-      - @product.product_images[1..3].each do |image|
-        %li
-          = image_tag "#{image.image_url}", alt: '', height: '120', width: '160', class: 'sub-img'
-%h1 ¥#{@product.price}
-%br/
-%h2 #{@product.description}
-%br/
-%table
-  %tr
-    %th 出品者
-    %td 
-      = @product.user.nickname
-  %tr
-    %th カテゴリー
-    %td
-      = Category.find(@product.category_id).parent.parent.category_name
-      %br/
-      = Category.find(@product.category_id).parent.category_name
-      %br/
-      = @product.category.category_name
-  %tr
-    %th ブランド
-    %td
-      = @product.brand
-  %tr
-    %th 商品のサイズ
-    %td
-      = @product.products_size.size_name
-  %tr
-    %th 商品の状態
-    %td
-      = Conditiontag.find(@product.condition).name
-  %tr
-    %th 配送料の負担
-    %td
-      = Chargetag.find(@product.shipping_charges).name
-  %tr
-    %th 発送元の地域
-    %td
-      = Areatag.find(@product.shipping_area).name
-  %tr
-    %th 発送日の目安
-    %td
-      = Daystag.find(@product.days_to_delivery).name
-%br/
--if user_signed_in? && current_user.id == @product.user_id
-  = link_to "商品の編集画面に進む", edit_product_path(product_id: @product)
-  = link_to "出品商品を取り下げる"
-- else
-  .product-show__transaction
-    .product-show__transaction-box
-      -# 商品購入済みであればSOLD OUT
-      - if @product_transaction.present?
-        .product-transaction-btn
-          SOLD OUT
-      - else
-        = link_to "購入画面に進む", pay_index_transactions_path(product_id: @product), class: "product-transaction-btn"
+.gray-background
+  .user-page
+    .section.item
+      %h1.item__name
+        = @product.name
+      %ul.item__content.clearfix
+        %li.item__content__image
+          = image_tag "#{@product.product_images[0].image_url}", class: 'item__content__image'
+          %ul.item__content__image__top
+            - @product.product_images[1..3].each do |image|
+              %li.item__content__image__top
+                = image_tag "#{image.image_url}"
+
+        %table.item__content__table
+          %tbody
+            %tr
+              %th 出品者
+              %td
+                = link_to @product.user.nickname
+
+            %tr
+              %th カテゴリー
+              %td
+                = Category.find(@product.category_id).parent.parent.category_name
+                %br/
+                = Category.find(@product.category_id).parent.category_name
+                %br/
+                = @product.category.category_name
+
+              %tr
+                %th ブランド
+                %td
+                  = link_to "#" do
+                    = @product.brand
+            %tr
+              %th 商品の状態
+              %td
+                = Conditiontag.find(@product.condition).name
+            %tr
+              %th 配送料の負担
+              %td
+                = Chargetag.find(@product.shipping_charges).name
+            %tr
+              %th 配送の方法
+              %td らくらくメルカリ便
+            %tr
+              %th 配送元地域
+              %td
+                = link_to "#" do
+                  = Areatag.find(@product.shipping_area).name
+            %tr
+              %th 発送の目安
+              %td
+                = Daystag.find(@product.days_to_delivery).name
+      .item__price
+        %span.item__price--bold
+          = "¥" + @product.price.to_s
+        %span.item__price__tax (税込)
+        %span.item__price__shipping-fee 送料込み
+        .item__btn
+          - if user_signed_in? && current_user.id == @product.user_id
+            = link_to "商品の編集画面に進む", edit_product_path(product_id: @product)
+            = link_to "出品商品を取り下げる", "/products/#{@product.id}", method: :delete
+          - else
+            .product-show__transaction
+              .product-show__transaction-box
+                -# 商品購入済みであればSOLD OUT
+                - if @product_transaction.present?
+                  .product-transaction-btn
+                    SOLD OUT
+                - else
+                  = link_to "購入画面に進む", pay_index_transactions_path(product_id: @product), class: "product-transaction-btn"
+                          
+      .item__description
+        %p.item__description--inner
+          = @product.description
+
+
 = render "layouts/footer"
