--- a/app/assets/stylesheets/modules/products/_show.scss
+++ b/app/assets/stylesheets/modules/products/_show.scss
@@ -34,22 +34,13 @@
       float:left;
       min-width: 300px;
       max-width: 300px;
-      min-height: 375px;
-      &__top:first-child{
-        position: relative;
-        overflow: hidden;
-        height: 300px;
-        width: 300px;
-        img{
-          height: 300px;
-          width: 300px;
-        }
-      }
+      min-height: 300px;
       &__top{
-        float: left;
+        display: flex;
         height:75px;
         width: 75px;
         img{
+          float: left;
           height:75px;
           width: 75px;
         }
