--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -53,7 +53,7 @@
 %br/
 -if user_signed_in? && current_user.id == @product.user_id
   = link_to "商品の編集画面に進む", edit_product_path(product_id: @product)
-  = link_to "出品商品を取り下げる", "/products/#{@product.id}", method: :delete
+  = link_to "出品商品を取り下げる", product_path , method: :delete
 - else
   .product-show__transaction
     .product-show__transaction-box
