--- a/app/assets/stylesheets/modules/products/_products.scss
+++ b/app/assets/stylesheets/modules/products/_products.scss
@@ -25,7 +25,7 @@
       margin: 0 auto;
       background-color: #fff;
 
-      .notice {
+      .error {
         max-width: 700px;
         margin: 0 auto;
         color:#262626; 
