--- a/app/views/products/destroy.html.haml
+++ b/app/views/products/destroy.html.haml
@@ -2,5 +2,5 @@
 .contents
   .success
     %h3 商品を取り下げました。
-    = link_to "出品した商品一覧に戻る", '#'
+    = link_to "TOPに戻る", '/'
 = render "layouts/footer"
