fix：不具合の修正
住所変更ページからクレジットカード登録画面に遷移した際、エラーが出ないようにするため

--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -74,7 +74,7 @@
           プロフィール
           %i.fa.fa-angle-right.icon
       %li
-        = link_to new_user_address_path(@user), class:"mypage-nav-list-item" do
+        = link_to new_user_address_path(current_user.id), class:"mypage-nav-list-item" do
           住所変更
           %i.fa.fa-angle-right.icon
       %li
